# fault-cli

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: build.yaml  release.yaml
deploy/docker/: Dockerfile  Dockerfile.dockerignore  Dockerfile_ebpf_x86_64  Dockerfile_from_release_ebpf.dockerignore
fault-cli/: Cargo.toml  README.md  build.rs
fault-cli/src/: cli.rs  config.rs  ebpf.rs  errors.rs  event.rs  main.rs  sched.rs  state.rs  termui.rs  types.rs
fault-cli/src/agent/: insight.rs  mod.rs  platform.rs  source.rs  suggestion.rs
fault-cli/src/agent/clients/: anthropic.rs  mod.rs
fault-cli/src/agent/mcp/: code.rs  mod.rs  tools.rs
fault-cli/src/agent/prompts/: report-causes.md  report-executive.md  report-next.md  report-summary.md
fault-cli/src/discovery/: types.rs
fault-cli/src/fault/: dns.rs  mod.rs
fault-cli/src/fault/llm/: inject.rs  openai.rs
fault-cli/src/inject/: mod.rs
fault-cli/src/inject/k8s/: env_override.rs  mod.rs  run.rs  scenario.rs
fault-cli/src/plugin/: mod.rs
fault-cli/src/proxy/: mapping.rs  mod.rs
fault-cli/src/proxy/protocols/: mod.rs
fault-cli/src/proxy/protocols/ebpf/: init.rs  mod.rs
fault-cli/src/proxy/protocols/http/proxy/: forward.rs  mod.rs  tunnel.rs
fault-cli/src/proxy/protocols/http/service/: handler.rs  mod.rs
fault-cli/src/proxy/protocols/tcp/: mod.rs
fault-cli/src/proxy/protocols/udp/: init.rs  mod.rs
fault-cli/src/report/: types.rs
fault-cli/src/report/render/: markdown.rs
fault-cli/src/scenario/generator/: v31x.rs
fault-cli/src/scenario/strategy/: repeat.rs
fault-ebpf-programs/: Cargo.toml
fault-ebpf-programs/src/: main.rs
