[workspace]
resolver = "2"
members = ["fault-cli", "fault-ebpf-programs"]
default-members = ["fault-cli"]

[workspace.package]
version = "0.16.0"
edition = "2024"
rust-version = "1.85"
license-file = "LICENSE"
repository = "https://github.com/fault-project/fault-cli" 
documentation = "https://fault-project.com" 
homepage = "https://fault-project.com"
include = [
  "build.rs",
  "src/**/*",
  "Cargo.toml",
  "Cargo.lock",
  "LICENSE*",
  "README.md",
]

[workspace.dependencies]
which = { version = "8.0.0", default-features = false, features = ["real-sys"] }
anyhow = { version = "1", default-features = false }

[profile.dev]
opt-level = 0
debug = 2
debug-assertions = true
overflow-checks = true
incremental = true

[profile.release]
opt-level = 3
lto = "thin"          # profile-level (allowed)
codegen-units = 1
panic = "abort"       # profile-level (allowed)
incremental = false
debug-assertions = false
overflow-checks = false
strip = "debuginfo"   # profile-level (allowed)

# ---------- Server-focused profiles you select explicitly ----------
[profile.prod-fast]
inherits = "release"
lto = "fat"
opt-level = 3
strip = "debuginfo"

[profile.prod-small]
inherits = "release"
lto = "thin"
opt-level = "z"
strip = "symbols"

# ---------- Per-package overrides (ONLY allowed keys) ----------

# (Optional) tweak the server crate a bit; do NOT set lto/strip/panic here
[profile.release.package.fault-cli]
opt-level = 3
codegen-units = 1
# (leave out panic/lto/strip)

# eBPF crate: conservative tweaks; again, no panic/lto/strip here
[profile.bpf]
inherits = "release"
lto = "off"            # <<< IMPORTANT: no LTO for BPF
opt-level = "z"        # small is good for eBPF objects
codegen-units = 1
panic = "abort"
debug = 0
debug-assertions = false
overflow-checks = false
strip = "debuginfo"
