[package]
name = "fault-ebpf-programs"
authors = ["Sylvain Hellegouarch <sylvain@rebound.how>"]
description = "eBPF programs for the fault CLI" 
keywords = ["fault", "ebpf"]
readme = "README.md"
repository.workspace = true
license-file.workspace = true
edition.workspace = true
rust-version.workspace = true
include.workspace = true
version.workspace = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs", "--generate-link-to-definition"]

[dependencies]
aya-ebpf = { git = "https://github.com/aya-rs/aya.git", rev = "c42157f0" }
aya-log-ebpf = { git = "https://github.com/aya-rs/aya.git", rev = "c42157f0" }
network-types = "0.1.0"

[build-dependencies]
which = { workspace = true }

[[bin]]
name = "fault-ebpf"
path = "src/main.rs"
